# plugin-manager

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
plugin_manager/: Cargo.toml  README.md
plugin_manager/src/: lib.rs  plugin_structs.rs
plugin_types/: Cargo.toml
plugin_types/src/: lib.rs
src/: lib.rs
tests/plugin_inventory/: Cargo.toml
tests/plugin_inventory/src/: inventory_a.rs  lib.rs
tests/plugin_mods/: Cargo-macos.toml  Cargo-windows.toml  Cargo.toml
tests/plugin_mods/src/: lib.rs  plugin_a.rs  plugin_b.rs
tests/plugin_tasks/: Cargo.toml
tests/plugin_tasks/src/: lib.rs  task_a.rs
