[package]
name = "plugin_mods"
version = "0.1.0"
edition = "2024"

[dependencies]
plugin_manager = { path = "../../plugin_manager" }

[package.metadata.plugins]
plugin_a_path = "../tests/target/release/libplugin_mods.so"

[package.metadata.plugins.inventory]
inventory_plugin = "../tests/target/release/libplugin_mods.so"


[lib]
crate-type = ["lib", "cdylib"]
